--- a/IntegracoesVTEX/DAL/SQL/Queries.resx
+++ b/IntegracoesVTEX/DAL/SQL/Queries.resx
@@ -124,4 +124,7 @@
   <data name="VTEX_PedidosIntegrar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>vtex_pedidosintegrar.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="VTEX_PedidoStatus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>vtex_pedidostatus.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
